-----------------------------------------------------------------------------------------
	$Id$
-----------------------------------------------------------------------------------------

2014-04-07	pwessel
	* grdfilter.c:		Added new filter -Fh<width>/<binwidth>[+c][+l][+u] to perform
				histogram mode filtering.

2014-04-05	pwessel
	* xyz2grd.c:		Replaced -N<nodata> with common option -di<nodata>, but
				left -N for backwards compatibility under 4.
	* grd2xyz.c:		Replaced -N[i]<nodata> with common option -d[i]<nodata>, but
				left -N for backwards compatibility under 4.

2014-04-04	pwessel
	* psbasemap.c:		Added new option -A[file] which instead of plotting a map
				will write the coordinates of the plot domain outline to
				the given file (or stdout).

2014-04-03	pwessel
	* gmt_init.c:		Added new common GMT option -d[i|o\<nodata>], which can be
				used anywhere to convert users <nodata> values to NaN, and to do
				the reverse on output.

2014-03-26	remko
	* ps2raster.c:		Bug fix: -C should also apply when computing BoundingBox.

2014-03-03	pwessel
	* pslegend.c:		The flush_paragraph was not reset to false before 2nd loop,
				causing the text (T) option to fail if it was the first item.

-----------------------------------------------------------------------------------------
2014-03-01	pwessel
	GMT 5.1.1 finalized and released.
-----------------------------------------------------------------------------------------
2014-02-27	remko
	* ps2raster.c:		Fix issue with psimage-included EPS files (issue #521)

2014-02-25	pwessel
	* xyz2grd.c:		Gave incorrect n_read count and for -bi -An insisted on 3 cols.

2014-02-22	pwessel
	* grdcontour.c:		Fix writing of contour labels to text file.

2014-02-20	pwessel
	* grdcontour.c:		The -Zscale/offset option was applied incorrectly due to a
				change in the underlying scaling function.
	* grdvolume.c:		---"---

2014-02-19	pwessel
	*mgd77/mgd77list.c:	Crashed with -Am4 as time column was not loaded.

2014-02-18	pwessel